--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -22,6 +22,13 @@
                 android:src="@drawable/batgirlcosplay"
                 />
         </android.support.percent.PercentRelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/content_images"
+            android:layout_width="match_parent"
+            android:layout_height="330dp">
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
     <FrameLayout
         android:layout_width="match_parent"
